--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^20.10.6",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "fawn": "^2.1.5",
     "mongoose": "^8.0.3",
     "typescript": "^5.3.3",
     "zod": "^3.22.4"
