--- a/package.json
+++ b/package.json
@@ -10,15 +10,23 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/config": "^3.3.3",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/lodash": "^4.14.202",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2"
   },
   "dependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.6",
+    "bcryptjs": "^2.4.3",
+    "config": "^3.3.10",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "fawn": "^2.1.5",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "mongoose": "^8.0.3",
     "typescript": "^5.3.3",
     "zod": "^3.22.4"
